--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">WebViewApp</string>
-    <string name="action_external_web">External Web Page</string>
-    <string name="action_internal_web">Internal Web Page</string>
+    <string name="action_external_web">HiS Student page</string>
+    <string name="action_internal_web">Welcome</string>
 </resources>
